Upgrade to hapi v1.3.0

--- a/public/examples.html
+++ b/public/examples.html
@@ -111,7 +111,7 @@
 		<li><a href="http://www.html5rocks.com/en/tutorials/getusermedia/intro/">Capturing Audio &amp; Video in HTML5</a></li>
 		<li><a href="http://jsfiddle.net/ArtBIT/kneDX/">JSFIDDLE for simple canvas drawing</a></li>
 		<!-- <li><a href="http://twitter.github.io/bootstrap/examples/starter-template.html">Twitter Bootstrap Template</a></li> -->
-		<li><a href="https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/FormData/Using_FormData_Objects?redirectlocale=en-US&redirectslug=DOM%2FXMLHttpRequest%2FFormData%2FUsing_FormData_Objects">Using FormData Objects</a></li>
+		<li><a href="https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/FormData/Using_FormData_Objects">Using FormData Objects</a></li>
 	</ul>
 
     </div> <!-- /container -->
