--- a/public/examples.html
+++ b/public/examples.html
@@ -7,44 +7,52 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Le styles -->
-    <link href="//twitter.github.io/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-    <link href="//twitter.github.io/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="theme.css" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
     <![endif]-->
   </head>
 
-  <body>
+  <body role="document">
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Hapi.js POST Examples</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="#forms">HTML Forms</a></li>
-              <li><a href="#xhr">XHR</a></li>
-              <li><a href="#files">File Upload</a></li>
-              <li><a href="#draw">Canvas</a></li>
-              <li><a href="#audio">Audio</a></li>
-              <li><a href="#screenshots">Screenshot</a></li>
-              <li><a href="#video">Video</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+          <a class="navbar-brand" href="#">Hapi.js POST Examples</a>
         </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Examples <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                  <li class="active"><a href="#forms">HTML Forms</a></li>
+                  <li><a href="#xhr">XHR</a></li>
+                  <li><a href="#files">File Upload</a></li>
+                  <li><a href="#draw">Canvas</a></li>
+                  <li><a href="#audio">Audio</a></li>
+                  <li><a href="#screenshots">Screenshot</a></li>
+                  <li><a href="#video">Video</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-    </div>
+    </nav>
+
 
     <div class="container">
 
@@ -53,7 +61,7 @@
 
 	<form class="form-inline" method="POST" action="/hello">
 	<input type="text" name="name" value="" placeholder="name" />
-	<input class="btn" type="Submit" value="Submit via HTML" />
+    <button type="submit" class="btn btn-primary">Submit via HTML</button>
 	</form>
 
 	<a id="xhr"></a>
@@ -61,14 +69,14 @@
 
 	<form class="form-inline" action="/hello">
 	<input type="text" name="name" value="" placeholder="name">
-	<button class="btn" onclick="return sendFormFromHTML(this.form);">Submit HTML form via XHR</button>
+	<button class="btn btn-primary" onclick="return sendFormFromHTML(this.form);">Submit HTML form via XHR</button>
 	</form>
 
-
-	<button class="btn" onclick="sendFormOnTheFly()">Send dynamically created form data</button>
+    <br /><br />
+	<button class="btn btn-primary" onclick="sendFormOnTheFly()">Send dynamically created form data</button>
 	<br /><br />
 
-	<button class="btn" onclick="sendJson()">Send JSON</button>
+	<button class="btn btn-primary" onclick="sendJson()">Send JSON</button>
 
 
 
@@ -77,7 +85,7 @@
 	<form class="form-inline" action="/hello" type="multipart/form-data">
 	<input type="text" name="name" value="" placeholder="name" />
 	<input type="file" name="uploadFile" placeholder="file" />
-	<button class="btn" onclick="return sendFormFromHTML(this.form);">Submit HTML form via XHR with file</button>
+	<button class="btn btn-primary" onclick="return sendFormFromHTML(this.form);">Submit HTML form via XHR with file</button>
 	</form>
 
 	<a id="draw"></a>
@@ -85,7 +93,7 @@
 	<div id="canvas">Click to draw<br/></div>
 	<form class="form-inline" action="/hello" method="POST" type="multipart/form-data">
 	<input type="text" name="name" value="" placeholder="name" />
-	<button class="btn" onclick="return sendCanvasFromHTML(this.form);">Submit canvas as an upload file</button>
+	<button class="btn btn-primary" onclick="return sendCanvasFromHTML(this.form);">Submit canvas as an upload file</button>
 	</form>
 
 
@@ -110,7 +118,6 @@
 		<li><a href="http://www.html5rocks.com/en/tutorials/file/dndfiles/">Reading files in JavaScript using the File APIs</a></li>
 		<li><a href="http://www.html5rocks.com/en/tutorials/getusermedia/intro/">Capturing Audio &amp; Video in HTML5</a></li>
 		<li><a href="http://jsfiddle.net/ArtBIT/kneDX/">JSFIDDLE for simple canvas drawing</a></li>
-		<!-- <li><a href="http://twitter.github.io/bootstrap/examples/starter-template.html">Twitter Bootstrap Template</a></li> -->
 		<li><a href="https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/FormData/Using_FormData_Objects">Using FormData Objects</a></li>
 	</ul>
 
@@ -240,8 +247,8 @@
 	})();
     </script>
 
-    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script> -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
   </body>
 </html>
